Import dhcpcd-5.6.7 with the following changes: * Preserve space in static routes on the command line. * Check correct interface the RAP came from; fixes PR bin/47433 thanks to   Taylor R Campbell * Ensure the nooption works for IPv4 routes